# moonlit-binge

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE_MIT  README.md  build.rs  deny.toml  encre.toml  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
assets/static/css/: bundle.css
assets/static/js/: sse.js
assets/views/: layout.html  macros.html
assets/views/auth/: forgot.html  index.html  login.html  register.html  reset.html
assets/views/dashboard/: home.html  index.html
assets/views/notifications/: index.html
assets/views/player_connections/: create.html  index.html  show.html  transcode.html
assets/views/player_connections/setup/: jellyfin.html
config/: development.yaml  test.yaml.tera  test.yaml.tpl
examples/: playground.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240623_111250_player_connections.rs  m20240707_110722_add_preferences_to_player_connection.rs  m20240709_154725_add_preferred_profile_to_player_connection.rs  m20240718_171057_contents.rs  m20240718_184207_content_downloads.rs  m20240721_161119_libraries.rs  m20240721_171819_add_root_libraries_to_player_connections.rs  m20240723_172208_add_sort_key_to_items.rs
players/: Cargo.toml  README.md
players/schemas/: jellyfin-openapi-stable-models-only.json  jellyfin-openapi-stable.json
players/src/: jellyfin.rs  lib.rs  testcontainers.rs  types.rs
src/: app.rs  lib.rs
src/common/: mod.rs  notifications.rs  settings.rs
src/controllers/: auth.rs  dashboard.rs  mod.rs  player_connections.rs  playlist.rs  user.rs
src/controllers/extractors/: auth.rs  mod.rs
src/controllers/middlewares/: auth_logged_in.rs  mod.rs  view_auth_ext.rs
src/initializers/: layers.rs  media_provider.rs  mod.rs  view_engine.rs
src/mailers/: auth.rs
src/mailers/auth/forgot/: html.t  text.t
src/mailers/auth/welcome/: html.t  text.t
src/models/: content_downloads.rs  contents.rs  libraries.rs  mod.rs  player_connections.rs
src/models/_entities/: content_downloads.rs  contents.rs  libraries.rs  mod.rs  player_connections.rs  prelude.rs  sea_orm_active_enums.rs  users.rs
src/views/: auth.rs  dashboard.rs  mod.rs  player_connections.rs
src/workers/: downloader.rs
tests/: mod.rs  testing.rs
tests/models/: contents.rs  mod.rs  player_connections.rs  users.rs
tests/requests/: auth.rs  mod.rs  player_connections.rs  prepare_data.rs  user.rs
tests/requests/snapshots/: can_register@auth_request-2.snap  can_reset_password@auth_request-2.snap  can_reset_password@auth_request.snap  login_with_invalid_password@auth_request.snap  login_with_valid_password@auth_request.snap
tests/tasks/: seed.rs
