[workspace]

[package]
name = "moonlit_binge"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
testing = [ "players/containers" ]

[dependencies]

loco-rs = { version = "0.6.0" }
migration = { path = "migration" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tokio = { version = "1.33.0", default-features = false }
async-trait = "0.1.74"
tracing = "0.1.40"
chrono = "0.4"
validator = { version = "0.16" }
sea-orm = { version = "1.0.0-rc.7", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
axum = "0.7.1"
listenfd = "1"
include_dir = "0.7"
uuid = { version = "1.6.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

# view engine i18n
fluent-templates = { version = "0.9.4", features = ["tera"] }
unic-langid = "0.9.4"
# /view engine

players = { path = "players" }
axum-htmx = { version = "0.6.0", features = ["serde", "tokio", "tower", "futures"] }
axum-extra = { version = "0.9.3", features = ["cookie", "query", "form"] }
tower = "0.4.13"
futures-util = "0.3.30"
tera = "1.20.0"
m3u8-rs = "6.0.0"
rusty-sidekiq = { version = "0.8.2", default-features = false }
reqwest = { version = "0.12.5",  features = ["json", "stream", "rustls-tls", "rustls-tls-native-roots", "charset", "http2", "macos-system-configuration"], default-features = false }
reqwest-retry = "0.6.0"
reqwest-middleware = "0.3.2"
axum-client-ip = "0.6.0"
tower-http = { version = "0.5.2", features = ["trace", "add-extension"] }

[[bin]]
name = "moonlit_binge-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
serial_test = "2.0.0"
rstest = "0.18.2"
loco-rs = { version = "0.6.0", features = ["testing"] }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
testcontainers = { version = "0.19.0", features = ["watchdog"] }
testcontainers-modules = { version = "0.6.1", features = ["blocking", "postgres", "redis"] }
once_cell = "1.19.0"
axum-test = "15.2.0"
players = { path = "players", features = [ "containers" ]}
async-once-cell = "0.5.3"

[build-dependencies]
encre-css = "0.12.0"
encre-css-typography = "0.1.3"
encre-css-icons = "0.1.4"
wax = "0.6.0"
toml = "0.8.8"
serde = { version = "1.0.137", features = ["derive"] }
